feat: Implement comprehensive terminal scripting and automation framework (#35)

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Adrian Wedd's interactive terminal interface showcasing recursive systems architecture and AI integration">
+    <meta name="author" content="Adrian Wedd">
     <title>Adrian Wedd - Terminal Interface</title>
     <link rel="stylesheet" href="assets/terminal.css">
+    <link rel="stylesheet" href="assets/accessibility.css">
+    <link rel="stylesheet" href="assets/script-editor.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <div class="container" role="main" id="main-content">
         <div class="header">
             <div class="window-controls">
                 <span class="control close"></span>
@@ -195,6 +200,9 @@
         
     </div>
     
+    <script src="assets/accessibility.js"></script>
+    <script src="assets/script-engine.js"></script>
+    <script src="assets/script-editor.js"></script>
     <script src="assets/music-player.js"></script>
     <script src="assets/audio-visualizer.js"></script>
     <script src="assets/particle-effects.js"></script>
